= MagLev Change Log

== Changes for 22923  2010-02-26

* Changing base version from 1.8.6 to 1.8.7 so we can begin 1.8.7 work
* Fixed problem preventing update to RubyGems 1.3.6
* Fixed problem on Mac with FFI callout/callin that caused YAML crashes

== Changes for 22907  2010-02-24

* in FFI implement callback , implement C float args .
* parser warnings  now controlled by -W, -w, -VERBOSE flags ,
  but are always printed of a SyntaxError occurs.
* Merged latest updates of psych into MagLev
* Add Symbol#to_proc

== Changes for 22891  2010-02-18

* Switch from RbYaml to libyaml + Psych
* Fix Trac 610, 640, 662, 663, 664, 665, 666
* Fix Trac 483, 473, 457, 422 (fixed by a previous release)
* Implement ENV.delete
* Added Enumerable#each_slice (but no Enumerator support).
* Add Socket::Constants
* Indexing is fixed: clean up and turn on examples/persistence/indexing
* Major underlying changes to AIO in GemStone -- replaces the use of 
  POSIX asynchronous IO with our own thread-based IO system for writing tranlogs

== Changes for 22816  2010-02-02

* Replaced previously patched irb with unpatched irb.rb and irb library
* Fix Trac 657, 659, 661
* Fix assertion failure in Ruby 'break' in 'slow' build.
* persistence-api documentation: fixed bogus references to
  Module#persistable=
* Fix Trac 657 in implementation of class variables
* Test::Unit now works
* Fix Enumerable#count for no-parameter case

== Changes for 22804  2010-01-29

* Fix Trac 656 in implemention of eval
* Fix Trac 654,655 in the IR generator phase of Ruby parser
* Webrick updated with security patch from 1.8.6p388
* Fixed --stone option to maglev-ruby
* Added Maglev::System.stone_name to return the name of the stone the VM is
  connected to.
* More fixes to eval for constant resolution
* Improve commit performance by changes in AIO usage
* Improve tranlog write performance by avoiding unnecessary fsync() calls
* Added new stats StnAioFsyncCount and StnAioTimeInFsyncMs

== Changes for 22780  2010-01-22
