@@ -11,7 +11,7 @@
 # them from O's.  S's are printed in lower case (s) to distinguish
 # them from 5's (fives).
 
-# GemStone version:         3.0.0, Fri Feb 26 19:12:08 2010
+# GemStone version:         3.0.0, Sat Feb 27 16:58:07 2010
 # Customer license:         MagLev Demo
 # Host processor type:      Darwin x86
 # Customer permissions:
@@ -21,15 +21,15 @@
 # Repository object limit:  1024 million objects
 # Shared cache size limit:  1024 MB
 # CPU affinity:             <unrestricted>
-# Sunset date:              05/28/10 20:38:31 PDT
+# Sunset date:              05/29/10 18:24:10 PDT
 # Customer name:            Ruby Community
 
-J4UPV PBUCI qYMKF HTU4W 4B6MH UFKFY
-RA35P UONMN LXFPV Uq3OY IC2XR BY67H
-4XMTA TsTXN MRTWC MRAL5 q2L6P NCOUA
+JZHAB Z46MY GGOBY XIDFJ HCTEH s3NCG
+5H6RI OFsIH WFN22 XKsNJ CsJB5 TVACU
+CGsAY MC3M6 HUVOF HAY4I LFLX6 7P56s
 
-qZ5s5 UXBJL XBV4q FqLI3 HN5UY C4LOO
-PMFNH 24VLM qG3Yq 3DCVU WY2HF WTJFJ
-RPDHY M
+4Y7LX JXGEC DKJGK U6CZq WXZBs POK2O
+VFPUT B55FE MZ4N6 UEsZ2 BJCXZ DONF7
+WRRM6 I
 
 # Key has 156 characters.
