@@ -11,7 +11,7 @@
 # them from O's.  S's are printed in lower case (s) to distinguish
 # them from 5's (fives).
 
-# GemStone version:         3.0.0, Fri Feb 26 19:12:04 2010
+# GemStone version:         3.0.0, Sat Feb 27 16:57:57 2010
 # Customer license:         MagLev Demo
 # Host processor type:      Linux x86
 # Customer permissions:
@@ -21,15 +21,15 @@
 # Repository object limit:  1024 million objects
 # Shared cache size limit:  1024 MB
 # CPU affinity:             <unrestricted>
-# Sunset date:              05/28/10 20:43:39 PDT
+# Sunset date:              05/29/10 18:29:28 PDT
 # Customer name:            Ruby Community
 
-KHGTs MCO55 B7YLG RTqUX TJV6N K62WA
-R3KsV EKCU6 EOMZC EMRP7 M6H7P qV3HE
-ZsAXC CGLFq A5COE VTO5V E2U7G INGT4
+qIIR2 34AXO 6HCUI IJEKX 5GLGY ONVqZ
+73ONM JHKOY 2OGPT sEHGH V6DJO K6T7q
+ALACq GCPA7 VOTXJ VsGqV 4LG5Y MRLR3
 
-GRUVV BVGRW sWWCU 65HZM 5JAOO VsRER
-TT3RD 2P2Xq ENPNC 6qD5Z LFOEs DDsOI
-X7q4H M
+GGOEM OIIOG CUN6O RW26U NGLMs AGWs2
+sWAMW E2GXE DFqOD GKKWB FKKMV qHOFR
+CRqM6 2
 
 # Key has 156 characters.
