@@ -11,7 +11,7 @@
 # them from O's.  S's are printed in lower case (s) to distinguish
 # them from 5's (fives).
 
-# GemStone version:         3.0.0, Fri Feb 26 19:15:11 US/Pacific 2010
+# GemStone version:         3.0.0, Sat Feb 27 17:05:03 US/Pacific 2010
 # Customer license:         MagLev Demo
 # Host processor type:      Sun Solaris x86
 # Customer permissions:
@@ -21,15 +21,15 @@
 # Repository object limit:  1024 million objects
 # Shared cache size limit:  1024 MB
 # CPU affinity:             <unrestricted>
-# Sunset date:              05/28/10 20:59:23 PDT
+# Sunset date:              05/29/10 18:49:26 PDT
 # Customer name:            Ruby Community
 
-sNOV3 TYsVJ sqM6W 3BPs6 54GWW I7CsM
-XC2HN qVNsL sTDMq IXGWG VG62F XE6F4
-CT2EM TR5CL BCEW4 EACFD R7LXI CHsG7
+EMJO7 OHKIJ MEqYE KJTVD B53Fs IM4LM
+REq2T VJHU4 ALJVJ 3LZ6Z FG6PI 2YFHq
+2ZDPE FXO7V AOOFU FZs2E 667HL 66TGG
 
-qVFRX ZG6FN FPWIN DVDI7 PXDLq OMs3G
-MILGG T6MX4 Pq7BV ITNIO 5VUsP 3IG3K
-L3ABX M
+UJs6J LHZ6R JEJqC DDZML FUBKX 2WLKZ
+2O4TR RCqKG Y27HH TP47G M7MYB RBYUq
+JUZ2C C
 
 # Key has 156 characters.
